--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: 56FL001's Radio Website
 email:
 description: > # this means to ignore newlines until "baseurl:"
   56FL001's Radio Website
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/56fl001.fldx.org" # the subpath of your site, e.g. /blog
 url: "http://56fl001.fldx.org" # the base hostname & protocol for your site
 twitter_username: 56fl001
 github_username:  teear
