Change url in config to github URL

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email:
 description: > # this means to ignore newlines until "baseurl:"
   56FL001's Radio Website
 baseurl: "/56fl001.fldx.org" # the subpath of your site, e.g. /blog
-url: "http://56fl001.fldx.org" # the base hostname & protocol for your site
+url: "http://teear.github.io" # the base hostname & protocol for your site
 twitter_username: 56fl001
 github_username:  teear
 
